--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -4,5 +4,5 @@ jobs:
   greeting:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello, World!"
+      - run: echo "Hello, I am ${{github.actor}}!"
       - uses: actions/checkout@v4
