--- a/.github/workflows/print-env.yml
+++ b/.github/workflows/print-env.yml
@@ -6,7 +6,7 @@ jobs:
   print:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "The variable EXAMPLE is: ${EXAMPLE}"
+      - run: echo "The value of EXAMPLE is ${EXAMPLE}"
       - env:
           EXAMPLE: Defined by step level
-        - run: echo "The variable EXAMPLE is: ${EXAMPLE}"
+        - run: echo "The value of EXAMPLE is ${EXAMPLE}"
